联系我们样式

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -146,6 +146,7 @@ nav a,nav a:hover,nav a:focus{
 	opacity:1;
 }
 .nav-home .navbar-nav > li > a {position:relative;}
+.contact .nav-home  .navbar-nav > li > a {color: #333;}
 .nav-home .navbar-nav > li a:hover span,
 .nav-home .navbar-nav > li.active a span{
 	opacity:0;
