--- a/static/css/main.css
+++ b/static/css/main.css
@@ -148,7 +148,8 @@ nav a,nav a:hover,nav a:focus{
 .contact .nav-home  .navbar-nav > li > a {color: #333;}
 .nav-home .navbar-nav > li a:hover span,
 .nav-home .navbar-nav > li.active a span{
-	opacity:0;
+	/* opacity:0; */
+	color: #e7bc86;
 }
 .nav-home .navbar-nav >li a:after{
 	font-size: 12px;
@@ -169,27 +170,27 @@ nav a,nav a:hover,nav a:focus{
 }*/
 .nav-home .navbar-nav > li:nth-child(1) a:hover:after,
 .nav-home .navbar-nav > li:nth-child(1).active a:after{
-	content:'首页';
+	/* content:'首页'; */
 }
 .nav-home .navbar-nav > li:nth-child(2) a:hover:after,
 .nav-home .navbar-nav > li:nth-child(2).active a:after{
-	content:'产品';
+	/* content:'产品'; */
 }
 .nav-home .navbar-nav > li:nth-child(3) a:hover:after,
 .nav-home .navbar-nav > li:nth-child(3).active a:after{
-	content:'大事记';
+	/* content:'大事记'; */
 }
 .nav-home .navbar-nav > li:nth-child(4) a:hover:after,
 .nav-home .navbar-nav > li:nth-child(4).active a:after{
-	content:'合作伙伴';
+	/* content:'合作伙伴'; */
 }
 .nav-home .navbar-nav > li:nth-child(5) a:hover:after,
 .nav-home .navbar-nav > li:nth-child(5).active a:after{
-	content:'企业文化';
+	/* content:'企业文化'; */
 }
 .nav-home .navbar-nav > li:nth-child(6) a:hover:after,
 .nav-home .navbar-nav > li:nth-child(6).active a:after{
-	content:'关于我们';
+	/* content:'关于我们'; */
 }
 /* .nav-home .navbar-nav > li:nth-child(6){
 	border-left: solid 1px #7d7f96;
@@ -682,13 +683,13 @@ section p{
 
 .nav-wrap{
 	position: fixed;
-    width:70%;
+    width:100%;
     height:0;
     right:0;
     top:0;
     z-index: 1040;
 	overflow:hidden;
-	background: #FFF;
+	background: rgba(6, 6, 6, 0.3);
 }
 .nav-wrap.in{
 	height:100%;
@@ -696,8 +697,8 @@ section p{
 }
 .nav-wrap .menu-el{
 	position: relative;
-	float:left;
-    width: 100%;
+	float:right;
+    width: 70%;
     height: 100%;
     overflow: hidden;
 }
@@ -1724,7 +1725,7 @@ section .title{
 	overflow: hidden;
 }
 .newsdetail .left .info img {
-	width: 100% !important;
+	/* width: 100% !important; */
 }
 .ndetailbox .right {
 	/* padding-top: 30px;	 */
@@ -2076,10 +2077,13 @@ section .title{
 	.partner .pimglist {
 		padding: 0;
 	}
+	.partner .pimglist:first-child {
+		padding-top: 20px;
+	}
 	.partner .pimglist .col-xs-6 {
 		margin-bottom: 20px;
 	}
-	.partner .bannerbg {padding-bottom: 40px;}
+	.partner .bannerbg {padding-bottom: 0;height: 250px;}
 	.partner .container {width: 100%;}
 	.partner .txt-orange { font-size: 12px; }
 	.partner .caption.txtXL {font-size: 24px;}
