--- a/static/css/main.css
+++ b/static/css/main.css
@@ -71,15 +71,17 @@ header .logo a:hover svg path{
 	/*fill: #ddd;*/
 }
 .navbar-toggle{
-	display: inline-block !important;
-    margin:0px 30px;
-    cursor:pointer;
-    margin-top: -10px;
+	position: absolute;
+    top: 28px;
+    right: 30px;
     width: 38px;
     height: 38px;
+	display: block;
+    cursor:pointer;
     border-radius: 20%;
     background-color: #e7bc86;
-    padding: 11px 8px;
+	padding: 11px 8px;
+	float: none;
 }
 .navbar-toggle:hover .icon-bar:nth-child(1){
 	width:70%;
@@ -374,7 +376,7 @@ video {
 	position: relative;
 }
 .basic {
-	height: 750px;
+	/* height: 750px; */
 }
 .basic .advantagebox {
 	padding: 10px 20px;
@@ -447,6 +449,7 @@ video {
     left: 4px;
 	height: 260px;
 	padding: 20px 30px;
+	color: #fff;
 }
 .item .p1 {
 	margin-bottom: 45px;
@@ -506,11 +509,11 @@ video {
 	margin-bottom: 40px;
 }
 .rules .cinfo {
-	height: 224px;
-	width: 1024px;
-	margin: 0 auto;
-	background-color: #202021;
-	padding-top: 74px;
+	height: 200px;
+    width: 1024px;
+    margin: 0 auto;
+    background-color: #202021;
+    padding-top: 54px;
 }
 .rules .cinfom {
     width: 96%;
@@ -688,7 +691,7 @@ section p{
     right:0;
     top:0;
     z-index: 1040;
-	overflow:hidden;
+	/* overflow:hidden; */
 	background: rgba(6, 6, 6, 0.3);
 }
 .nav-wrap.in{
@@ -916,7 +919,7 @@ section p{
 	width: 1170px;
 	height: 362px;
 	margin-top: 74px;
-	margin-bottom: 136px;
+	margin-bottom: 86px;
 }
 .adapter .companybox .bleft {
 	position: absolute;
@@ -1488,12 +1491,11 @@ section .title{
 }
 .partner {}
 .partner .bannerbg {
-	max-height: 378px;
-	background: url('../img/partner_banner.jpg') center center no-repeat;
-	background-size: cover;	
-	padding-top: 80px;
-	/* height: auto; */
-	height: 378px;
+	max-height: 428px;
+    background: url(../img/partner_banner.jpg) center center no-repeat;
+    background-size: cover;
+    padding-top: 130px;
+    height: 428px;
 }
 .partner .txt-orange {
 	color: #e5bf87;
@@ -1869,14 +1871,14 @@ section .title{
     right: 0;
 }
 @media (max-width: 767px) {
-	.bg_video,.banner-video {
+	/* .bg_video,.banner-video {
 	    display: none;
 	    visibility: hidden;
-	}
+	} */
 	header .logo {
 	    margin: 0 20px;
 	}
-	.navbar-toggle{ margin:0 15px; margin-top: -8px;}
+	.navbar-toggle{ margin:0;}
 	.nav-wrap .closebtn {right:15px;}
 	.intro{
 		padding: 0 15px;
@@ -1933,8 +1935,8 @@ section .title{
 	/*#player{
 		background-attachment:scroll;
 	}*/
-	.nav-wrap.in > div:nth-child(2) { width:100%;}
-	.nav-wrap > div:nth-child(3) { display: none;}
+	/* .nav-wrap.in > div:nth-child(2) { width:100%;}
+	.nav-wrap > div:nth-child(3) { display: none;} */
 	.nav-wrap.in .navbar-wrap .nav>li>a{
 		padding-left: 40%;
 	}
