--- a/static/css/main.css
+++ b/static/css/main.css
@@ -86,6 +86,13 @@ header .logo a:hover svg path{
 .navbar-toggle:hover .icon-bar:nth-child(1){
 	width:70%;
 }
+.navbar-toggle:hover .icon-bar:nth-child(2){
+	width: 80%;
+    margin-left: 20%;
+}
+.navbar-toggle:hover .icon-bar:nth-child(3){
+	width:70%;
+}
 .navbar-toggle .icon-bar {
     background-color: #fff;
     height: 3px;
@@ -522,7 +529,7 @@ video {
     width: 96%;
     margin: 0 auto;
     background-color: rgba(0,0,0,0.6);
-    padding: 30px 0 40px 10px;
+    padding: 30px 0 30px 10px;
     text-align: left;
 }
 .mt10 { margin-top: 30px; }
@@ -538,7 +545,7 @@ video {
 	font-size: 16px;
 	color: #fff;
 	padding: 10px 20px 10px 34px;
-	display: block;
+	display: inline-block;
 }
 .rules .cinfo .ctel {
 	background: url('../img/cinfo_tel.jpg') left center no-repeat;
@@ -1526,6 +1533,24 @@ section .title{
 .partner .pimglist .row img {
 	width: 100%;
 }
+.partner .pimglist .row {
+	width: 100%;
+	position: relative;
+}
+.partner .pimglist .row span {
+	position: absolute;
+	width: 100%;
+	height: 16.667%;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	font-size: 12px;
+	color: #fff;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 .bc22405a {background-color: #22405a;}
 .bc203b54 {background-color: #203b54;}
 .clearfix{overflow:auto;_height:1%}
@@ -1895,6 +1920,7 @@ section .title{
 	} */
 	.bgtxt h1 {font-size: 32px;}
 	.bgtxt p {font-size: 14px;}
+	.newsbg .bgtxt h1 {padding-top: 20px;}
 	header .logo {
 	    margin: 0 20px;
 	}
@@ -2088,6 +2114,21 @@ section .title{
 	}
 	.partner .pimglist .row {
 		width: 100%;
+		position: relative;
+	}
+	.partner .pimglist .row span {
+		position: absolute;
+		width: 100%;
+		height: 16.667%;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		font-size: 12px;
+		color: #fff;
+		text-align: center;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 	.adapter .complist img {
 		position: absolute;
@@ -2113,10 +2154,10 @@ section .title{
 	.partner .pimglist .col-xs-6 {
 		margin-bottom: 20px;
 	}
-	.partner .bannerbg {padding-bottom: 0;height: 250px;padding-top: 78px;}
+	.partner .bannerbg {padding-bottom: 0;height: 268px;padding-top: 78px;}
 	.partner .container {width: 100%;}
 	.partner .txt-orange { font-size: 12px; }
-	.partner .caption.txtXL {font-size: 24px;}
+	.partner .caption.txtXL {font-size: 32px;}
 	.newsbox {width: auto;margin-bottom: 0;padding-bottom: 0;padding-top: 24px;}
 	.newsbox .mitem {margin: 40px 4%;padding:2% 4%;background-color: rgba(255, 255, 255, 0.28);color: #FFF;position: relative;display: block;}
 	.newsbox .mitem p {
