--- a/static/css/main.css
+++ b/static/css/main.css
@@ -389,7 +389,7 @@ video {
 	/* height: 750px; */
 }
 .basic .advantagebox {
-	padding: 10px 20px;
+	padding: 10px 20px 44px 20px;
 	text-align: left;
 	color: #fff;
 }
@@ -2084,6 +2084,11 @@ section .title{
 		padding-left: 20px;
 		font-size: 22px;
 		margin-top: 20px;	
+	}
+	.basic .advantagebox {
+		padding: 10px 20px 34px 20px;
+		color: #fff;
+		text-align: left;
 	}
 	.adapter {
 		overflow: hidden;
