--- a/static/css/main.css
+++ b/static/css/main.css
@@ -934,7 +934,7 @@ section p{
 	position: relative;
 	width: 1170px;
 	height: 362px;
-	margin-top: 74px;
+	margin-top: 40px;
 	margin-bottom: 86px;
 	overflow: hidden;
 }
@@ -2099,6 +2099,9 @@ section .title{
 	.adapter .content {
 		padding-top: 24px;
 		padding-bottom: 64px;
+	}
+	.adapter .companybox {
+		margin-top: 74px;
 	}
 	.adapter .complist {
 		width: 100%;
